# swagger-output.json
@@ -5,11 +5,9 @@
     "description": "API Documentation for FMilk Web",
     "version": "1.0.0"
   },
-  "host": "localhost:8000",
+  "host": "fmilk-server.onrender.com",
   "basePath": "/api/v1",
-  "schemes": [
-    "http"
-  ],
+  "schemes": ["https"],
   "securityDefinitions": {
     "BearerAuth": {
       "type": "apiKey",
@@ -21,9 +19,7 @@
   "paths": {
     "/auth/infoUser": {
       "get": {
-        "tags": [
-          "Auth"
-        ],
+        "tags": ["Auth"],
         "description": "",
         "parameters": [
           {
@@ -47,9 +43,7 @@
     },
     "/auth/register": {
       "post": {
-        "tags": [
-          "Auth"
-        ],
+        "tags": ["Auth"],
         "description": "",
         "parameters": [
           {
@@ -95,9 +89,7 @@
     },
     "/auth/login": {
       "post": {
-        "tags": [
-          "Auth"
-        ],
+        "tags": ["Auth"],
         "description": "",
         "parameters": [
           {
@@ -134,9 +126,7 @@
     },
     "/auth/refresh": {
       "post": {
-        "tags": [
-          "Auth"
-        ],
+        "tags": ["Auth"],
         "description": "",
         "parameters": [
           {
@@ -164,9 +154,7 @@
     },
     "/user/": {
       "get": {
-        "tags": [
-          "User"
-        ],
+        "tags": ["User"],
         "description": "",
         "parameters": [
           {
@@ -198,9 +186,7 @@
     },
     "/user/{id}": {
       "get": {
-        "tags": [
-          "User"
-        ],
+        "tags": ["User"],
         "description": "",
         "parameters": [
           {
@@ -226,9 +212,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "User"
-        ],
+        "tags": ["User"],
         "description": "",
         "parameters": [
           {
@@ -254,9 +238,7 @@
         }
       },
       "put": {
-        "tags": [
-          "User"
-        ],
+        "tags": ["User"],
         "description": "",
         "parameters": [
           {
@@ -310,9 +292,7 @@
     },
     "/user/status/{id}": {
       "patch": {
-        "tags": [
-          "User"
-        ],
+        "tags": ["User"],
         "description": "",
         "parameters": [
           {
@@ -352,9 +332,7 @@
     },
     "/product/": {
       "get": {
-        "tags": [
-          "Product"
-        ],
+        "tags": ["Product"],
         "description": "",
         "parameters": [
           {
@@ -383,9 +361,7 @@
     },
     "/product/{id}": {
       "get": {
-        "tags": [
-          "Product"
-        ],
+        "tags": ["Product"],
         "description": "",
         "parameters": [
           {
@@ -408,9 +384,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "Product"
-        ],
+        "tags": ["Product"],
         "description": "",
         "parameters": [
           {
@@ -436,9 +410,7 @@
         }
       },
       "put": {
-        "tags": [
-          "Product"
-        ],
+        "tags": ["Product"],
         "description": "",
         "parameters": [
           {
@@ -463,55 +435,10 @@
                   "example": "any"
                 },
                 "quantity": {
-                  "example": 1
+                  "example": 10
                 },
                 "typeOfProduct": {
                   "example": "any"
-                },
-                "price": {
-                  "example": 10
-                },
-                "rating": {
-                  "example": 10
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "403": {
-            "description": "Forbidden"
-          }
-        }
-      }
-    },
-    "/product/create": {
-      "post": {
-        "tags": [
-          "Product"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "name": {
-                  "example": "any"
-                },
-                "expireDate": {
-                  "example": "any"
-                },
-                "quantity": {
-                  "example": 10
                 },
                 "price": {
                   "example": 10
@@ -536,11 +463,61 @@
         }
       }
     },
+    "/product/create": {
+      "post": {
+        "tags": ["Product"],
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "example": "any"
+                },
+                "expireDate": {
+                  "example": "YYYY-MM-DD"
+                },
+                "quantity": {
+                  "example": 10
+                },
+                "price": {
+                  "example": 10
+                },
+                "rating": {
+                  "example": 5
+                },
+                "image": {
+                  "example": "any"
+                },
+                "typeOfProduct": {
+                  "example": "any"
+                },
+                "description": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        }
+      }
+    },
     "/post/": {
       "get": {
-        "tags": [
-          "Post"
-        ],
+        "tags": ["Post"],
         "description": "",
         "parameters": [
           {
@@ -569,9 +546,7 @@
     },
     "/post/{id}": {
       "get": {
-        "tags": [
-          "Post"
-        ],
+        "tags": ["Post"],
         "description": "",
         "parameters": [
           {
@@ -594,9 +569,7 @@
         }
       },
       "put": {
-        "tags": [
-          "Post"
-        ],
+        "tags": ["Post"],
         "description": "",
         "parameters": [
           {
@@ -637,9 +610,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "Post"
-        ],
+        "tags": ["Post"],
         "description": "",
         "parameters": [
           {
@@ -667,9 +638,7 @@
     },
     "/post/create": {
       "post": {
-        "tags": [
-          "Post"
-        ],
+        "tags": ["Post"],
         "description": "",
         "parameters": [
           {
@@ -678,6 +647,9 @@
             "schema": {
               "type": "object",
               "properties": {
+                "productId": {
+                  "example": "any"
+                },
                 "title": {
                   "example": "any"
                 },
@@ -685,9 +657,6 @@
                   "example": "any"
                 },
                 "image": {
-                  "example": "any"
-                },
-                "productId": {
                   "example": "any"
                 }
               }
@@ -709,9 +678,7 @@
     },
     "/order/create": {
       "post": {
-        "tags": [
-          "Order"
-        ],
+        "tags": ["Order"],
         "description": "",
         "parameters": [
           {
@@ -742,19 +709,7 @@
                   "items": {
                     "type": "object",
                     "properties": {
-                      "name": {
-                        "type": "string",
-                        "example": "any"
-                      },
-                      "image": {
-                        "type": "string",
-                        "example": "any"
-                      },
                       "amount": {
-                        "type": "number",
-                        "example": 10
-                      },
-                      "price": {
                         "type": "number",
                         "example": 10
                       },
@@ -766,7 +721,7 @@
                   }
                 },
                 "userId": {
-                  "example": "any"
+                  "example": null
                 },
                 "paymentMethod": {
                   "example": "any"
@@ -793,6 +748,9 @@
           },
           "403": {
             "description": "Forbidden"
+          },
+          "404": {
+            "description": "Not Found"
           }
         }
       }
@@ -801,14 +759,7 @@
   "definitions": {
     "User": {
       "title": "user",
-      "required": [
-        "username",
-        "name",
-        "phone",
-        "email",
-        "address",
-        "password"
-      ],
+      "required": ["username", "name", "phone", "email", "address", "password"],
       "properties": {
         "username": {
           "type": "string"
@@ -891,10 +842,7 @@
         },
         "status": {
           "type": "string",
-          "enum": [
-            "AVAILABLE",
-            "EXPIRE"
-          ]
+          "enum": ["AVAILABLE", "EXPIRE"]
         },
         "_id": {
           "type": "string"
@@ -911,11 +859,7 @@
     },
     "Post": {
       "title": "post",
-      "required": [
-        "title",
-        "productId",
-        "image"
-      ],
+      "required": ["title", "productId", "image"],
       "properties": {
         "title": {
           "type": "string"
@@ -973,13 +917,7 @@
                 "type": "schemaobjectid"
               }
             },
-            "required": [
-              "name",
-              "image",
-              "amount",
-              "price",
-              "productId"
-            ]
+            "required": ["name", "image", "amount", "price", "productId"]
           }
         },
         "userId": {
